<resources>
    <string name="app_name">FinalProject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="home">Trang chủ</string>
    <string name="book">Đặt nhanh</string>
    <string name="discount">Ưu đãi</string>
    <string name="discount2">Khuyến mãi</string>
    <string name="account">Tài khoản</string>
    <string name="name">Họ và tên</string>
    <string name="phone">Số điện thoại</string>
    <string name="email">Email</string>
    <string name="gender">Giới tính</string>
    <string name="mypage">Trang của tôi</string>
    <string name="mybooking">Lịch sử đặt phòng</string>
    <string name="myfavorite">Phòng yêu thích</string>
    <string name="settings">Cài đặt</string>
    <string name="notification">Thông báo</string>
    <string name="location">Vị trí</string>
    <string name="languages">Ngôn ngữ</string>
    <string name="info">Thông tin</string>
    <string name="privacy">Điều khoản và Chính sách bảo mật</string>
    <string name="info2">Liên hệ</string>
    <string name="logout">Đăng xuất</string>
    <string name="lanVie">Tiếng Việt</string>
    <string name="lanEn">Tiếng Anh</string>
    <string name="btnLan">Áp dụng</string>
    <string name="termAndPrivacyPolicy"><b>Điều khoản và Chính sách bảo mật</b></string>
    <string name="serviceAgreement"><i>Thỏa thuận \n dịch vụ</i></string>
    <string name="privacyPolicy"><i>Chính sách \n bảo mật</i></string>
    <string name="paymentPolicy"><i>Chính sách \n thanh toán</i></string>
    <string name="content1"><b>Thỏa thuận Dịch vụ - Travelnest</b>\nXin vui lòng đọc kỹ Thỏa thuận Dịch vụ này trước khi bạn bắt đầu sử dụng ứng dụng Travelnest để đặt phòng khách sạn. Bằng việc sử dụng ứng dụng này, bạn cam kết tuân theo các điều khoản và điều kiện sau đây.\n<b>Quyền và Trách nhiệm của Người dùng</b>\na. Người dùng cam kết cung cấp thông tin cá nhân chính xác và đầy đủ khi đăng ký và sử dụng ứng dụng Travelnest.\nb. Người dùng hiểu và đồng ý rằng họ sẽ chịu trách nhiệm về bất kỳ giao dịch, phí, hoặc các vấn đề liên quan đến việc đặt phòng thông qua ứng dụng.\nc. Người dùng đồng ý tuân theo các quy định của các khách sạn và nhà cung cấp dịch vụ khi sử dụng ứng dụng Travelnest.\n<b>Quyền và Trách nhiệm của Travelnest</b>\na. Travelnest cam kết bảo vệ thông tin cá nhân của người dùng và sử dụng nó theo chính sách bảo mật.\nb. Travelnest sẽ cung cấp thông tin về các khách sạn, phòng và giá cả một cách chi tiết và chính xác.\nc. Travelnest sẽ cố gắng giải quyết các vấn đề phát sinh giữa người dùng và khách sạn hoặc nhà cung cấp dịch vụ theo quy định của pháp luật.\n<b>Hủy đặt phòng và Hoàn tiền</b>\na. Người dùng cần tuân theo quy định về hủy đặt phòng của từng khách sạn và nhà cung cấp dịch vụ. Travelnest sẽ không chịu trách nhiệm về việc hủy đặt phòng hoặc hoàn tiền.\n<b>Phí và Thanh toán</b>\na. Người dùng sẽ chịu trách nhiệm về việc thanh toán các phí liên quan đến đặt phòng, bao gồm giá phòng và các phí phát sinh.\nb. Travelnest có quyền tính phí dựa trên việc sử dụng ứng dụng và dịch vụ.\n<b>Chấm dứt Thỏa thuận</b>\na. Cả Travelnest và người dùng có quyền chấm dứt Thỏa thuận này bất kỳ lúc nào.\nb. Chấm dứt này không ảnh hưởng đến các quyền và trách nhiệm tích cực đã phát sinh trước khi Thỏa thuận này bị chấm dứt.\n<b>Thay đổi Thỏa thuận</b>\na. Travelnest có quyền thay đổi Thỏa thuận này và sẽ thông báo trước cho người dùng về bất kỳ thay đổi nào.\nb. Người dùng có quyền từ chối thay đổi và ngưng sử dụng ứng dụng nếu họ không đồng ý với các thay đổi này.\nVui lòng đọc kỹ và hiểu rõ Thỏa thuận Dịch vụ này trước khi bạn bắt đầu sử dụng ứng dụng Travelnest. Việc sử dụng ứng dụng này đồng nghĩa với việc bạn chấp nhận tất cả các điều khoản và điều kiện được quy định trong Thỏa thuận này.\nXin cảm ơn bạn đã sử dụng Travelnest!</string>
    <string name="content2"><b>Thông tin Thu thập và Bảo mật</b>\nChúng tôi hiểu rằng quyền riêng tư của bạn là rất quan trọng và cam kết bảo vệ thông tin cá nhân của bạn. Dưới đây là mô tả về cách chúng tôi thu thập, sử dụng và bảo mật thông tin của bạn:\n<b>1. Thu thập thông tin cá nhân:</b>\nChúng tôi có thể thu thập thông tin cá nhân của bạn khi bạn sử dụng ứng dụng của chúng tôi. Thông tin này có thể bao gồm tên, địa chỉ email, số điện thoại và các thông tin khác cần thiết để cung cấp dịch vụ.\n<b>2. Sử dụng thông tin:</b>\nChúng tôi sử dụng thông tin cá nhân của bạn để cung cấp dịch vụ, xử lý giao dịch và cải thiện trải nghiệm của bạn trong ứng dụng.\n<b>3. Bảo mật thông tin:</b>\nChúng tôi cam kết bảo vệ thông tin cá nhân của bạn và không chia sẻ thông tin này với bất kỳ bên thứ ba nào mà không có sự đồng ý của bạn.</string>
    <string name="content3"><b>Phương thức thanh toán và Bảo mật</b>\nChúng tôi cam kết đảm bảo rằng các giao dịch thanh toán của bạn thông qua ứng dụng của chúng tôi được thực hiện một cách an toàn và bảo mật. Dưới đây là mô tả về phương thức thanh toán và các biện pháp bảo mật:\n<b>1. Phương thức thanh toán:</b>\nChúng tôi cung cấp một loạt các phương thức thanh toán cho bạn lựa chọn. Điều này có thể bao gồm thẻ tín dụng, thẻ ghi nợ, ví điện tử, hoặc các phương thức thanh toán trực tuyến khác.\n<b>2. Bảo mật thanh toán:</b>\nChúng tôi sử dụng các biện pháp bảo mật công nghệ để đảm bảo rằng thông tin thanh toán của bạn được bảo vệ. Tất cả các giao dịch thanh toán đều được mã hóa và được thực hiện thông qua các cổng thanh toán an toàn.\n<b>3. Quản lý thông tin thanh toán:</b>\nChúng tôi không lưu trữ thông tin thanh toán của bạn sau khi giao dịch hoàn tất. Mục tiêu của chúng tôi là bảo vệ sự riêng tư và an toàn của bạn.</string>
    <string name="hello">TravelNest xin chào!</string>
    <string name="descriptionSignIn">Đăng nhập để đặt phòng với những ưu đãi độc quyền dành cho thành viên</string>
    <string name="descriptionSignUp">Đăng ký để nhận ngay các ưu đãi độc quyền</string>
    <string name="descriptionForgotPassword">Cung cấp email tài khoản mà bạn muốn đặt lại mật khẩu!</string>
    <string name="password">Mật khẩu</string>
    <string name="signIn">Đăng nhập ngay</string>
    <string name="signUp">Đăng ký ngay</string>
    <string name="resetPass">Đặt lại mật khẩu</string>
    <string name="back">Quay về</string>
    <string name="forgotPassword">Quên mật khẩu</string>
    <string name="otherSignIn">Hoặc đăng nhập nhanh bằng</string>
    <string name="dontHaveAccount">Bạn chưa có tài khoản?</string>
    <string name="HaveAccount">Bạn đã có tài khoản?</string>
    <string name="signUpNow"><u>Đăng kí ngay</u></string>
    <string name="signInNow"><u>Đăng nhập ngay</u></string>
    <string name="timeBooking">giờ đầu</string>
    <string name="from">Chỉ từ</string>
    <string name="tvDiscount">Mã giảm</string>
    <string name="searchHotel">Tìm kiếm khách sạn</string>
    <string name="typeHours">Theo giờ</string>
    <string name="typeDay">Theo ngày</string>
    <string name="typeNight">Qua đêm</string>
    <string name="btnUse">SỬ\nDỤNG</string>
    <string name="discountAvailableModel">Có thể sử dụng</string>
    <string name="discountHistory">Lịch sử</string>
    <string name="expired">Hết hạn: </string>
    <string name="titleDiscount">Ưu đãi</string>
    <string name="byHours">Theo giờ</string>
    <string name="byNight">Qua đêm</string>
    <string name="byDay">Theo ngày</string>
    <string name="checkIn">Nhận phòng</string>
    <string name="checkOut">Trả phòng</string>
    <string name="numHour">Số giờ</string>
    <string name="numNight">Số đêm</string>
    <string name="numDay">Số ngày</string>
    <string name="btnSearch">Tìm kiếm</string>
    <string name="selectTime">Chọn thời gian</string>
    <string name="btnClose">Đóng</string>
    <string name="btnApply">Áp dụng</string>
    <string name="searchHistory">Lịch sử tìm kiếm</string>
    <string name="checkInTime">Thời gian nhận phòng</string>
    <string name="hourOfUse">Số giờ sử dụng</string>
    <string name="Day">Sáng</string>
    <string name="Night">Tối</string>
    <string name="serviceHotel">Tiện ích khách sạn</string>
    <string name="wifi">Wifi</string>
    <string name="TV">TV</string>
    <string name="receptionist">Lễ tân 24/24</string>
    <string name="bathroom">Phòng tắm đứng</string>
    <string name="bathtub">Bồn tắm</string>
    <string name="kingbed">King bed</string>
    <string name="checkInOutTime">Giờ nhận phòng/trả phòng</string>
    <string name="typeOfBookingRoom">Loại đặt phòng</string>
    <string name="time">Thời gian</string>
    <string name="cancellationPolicy">Chính sách hoàn hủy</string>
    <string name="contentCancellationPolicy">Hủy miễn phí trước giờ nhận phòng 1 tiếng</string>
    <string name="chooseRoom">Chọn phòng</string>
    <string name="fromOnly">Chỉ từ</string>
    <string name="listRoom">Danh sách phòng</string>
    <string name="intro">Giới thiệu</string>
    <string name="bookRoom">Đặt phòng</string>
    <string name="confirmPayment">Xác nhận và thanh toán</string>
    <string name="bookingInfo">Thông tin đặt phòng</string>
    <string name="userInfo">Thông tin người đặt phòng</string>
    <string name="userPhoneNumber">Số điện thoại</string>
    <string name="userName">Họ tên</string>
    <string name="chooseDiscount">Chọn ưu đãi</string>
    <string name="contentDiscount">Tận hưỡng đặt phòng với ưu đãi</string>
    <string name="paymentMethod">Phương thức thanh toán</string>
    <string name="cash">Thanh toán tại khách sạn</string>
    <string name="zaloPay">Ví ZaloPay</string>
    <string name="paymentDetails">Chi tiết thanh toán</string>
    <string name="price">Tiền phòng</string>
    <string name="totalPrice">Tổng thanh toán</string>
    <string name="searchResult">Kết quả tìm kiếm</string>
    <string name="historyBooking">Lịch sử đặt phòng</string>


</resources>