<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Login.ForgotPasswordActivity"
    android:gravity="center_horizontal"
    android:layout_marginTop="80dp"
    android:padding="30dp">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_lock_forgotpass"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/playfairdisplay_bold"
        android:text="@string/forgotPassword"
        android:layout_marginBottom="10dp"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/textView5"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descriptionForgotPassword"
        android:fontFamily="@font/playfairdisplay_medium"
        android:textSize="15dp"
        android:layout_marginBottom="30dp"/>

    <EditText
        android:id="@+id/edt_email_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_edittext"
        android:ems="50"
        android:hint="@string/email"
        android:inputType="text"
        android:drawableLeft="@drawable/baseline_email_24"
        android:drawablePadding="10dp"
        android:fontFamily="@font/playfairdisplay_regular"
        android:paddingStart="8dp"
        android:paddingTop="8dp"
        android:paddingEnd="8dp"
        android:paddingBottom="8dp"
        android:textSize="20dp">

        <requestFocus />
    </EditText>

    <ProgressBar
        android:id="@+id/forgotProgressBar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/btn_reset_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:backgroundTint="#4CAF50"
        android:text="@string/resetPass"
        />

    <Button
        android:id="@+id/btn_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:backgroundTint="#4CAF50"
        android:text="@string/back"
        android:drawableStart="@drawable/baseline_arrow_back_24"
        android:drawablePadding="-100dp"
        />
</LinearLayout>