<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".Login.Login">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:layout_marginTop="10dp"
                android:text="@string/hello"
                />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="232dp"
                android:layout_height="wrap_content"
                android:text="@string/descriptionSignIn"
                android:textSize="15sp"
                android:fontFamily="@font/playfairdisplay_regular"
                android:layout_marginBottom="20dp"/>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    >

                    <ImageView
                        android:id="@+id/imgLogo"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:src="@drawable/logo3"
                        android:layout_gravity="center"
                        />

                    <EditText
                        android:id="@+id/edt_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rounded_edittext"
                        android:ems="50"
                        android:hint="@string/email"
                        android:inputType="text"
                        android:drawableLeft="@drawable/baseline_email_24"
                        android:drawablePadding="10dp"
                        android:fontFamily="@font/playfairdisplay_regular"
                        android:paddingStart="8dp"
                        android:paddingTop="8dp"
                        android:paddingEnd="8dp"
                        android:paddingBottom="8dp"
                        android:textSize="20dp">

                        <requestFocus />
                    </EditText>

                    <TextView
                        android:id="@+id/prefix"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:drawablePadding="5dp"
                        android:gravity="center_vertical"
                        android:paddingStart="8dp" />

                    <EditText
                        android:id="@+id/edt_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rounded_edittext"
                        android:ems="10"
                        android:hint="@string/password"
                        android:fontFamily="@font/playfairdisplay_regular"
                        android:inputType="textPassword"
                        android:drawableLeft="@drawable/baseline_lock_24"
                        android:drawablePadding="10dp"
                        android:paddingStart="8dp"
                        android:paddingTop="8dp"
                        android:paddingEnd="8dp"
                        android:paddingBottom="8dp"
                        android:textSize="20dp">

                    </EditText>
                    <TextView
                        android:id="@+id/tvForgotPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/forgotPassword"
                        android:layout_gravity="right"
                        android:layout_marginTop="10dp"
                        android:textColor="#4CAF50"/>
                </LinearLayout>

            </FrameLayout>

            <Button
                android:id="@+id/btn_verify_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="@color/white"
                android:backgroundTint="#4CAF50"
                android:text="@string/signIn"
                android:layout_marginBottom="40dp"/>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center|bottom"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="60dp"
                    android:textColor="#787878"
                    android:text="@string/dontHaveAccount" />

                <TextView
                    android:id="@+id/tvSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/signUpNow"
                    android:textColor="#4CAF50"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>